# StarAcc

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_foundation.py  0002_accounting_core.py  0003_ar_foundation.py  0004_ap_foundation.py  0005_banking_foundation.py  0006_reporting_core.py  0007_tax_engine_foundation.py  0008_settings_documents_notifications.py
app/: main.py
app/core/: config.py  enums.py  security.py
app/repositories/: account_repository.py  audit.py  bank_account_repository.py  bank_transaction_repository.py  bill_repository.py  branding_settings_repository.py  credit_note_repository.py  customer_payment_repository.py  customer_repository.py  document_link_repository.py  email_log_repository.py  email_template_repository.py  file_repository.py  invoice_repository.py  journal_repository.py  membership.py  notification_repository.py  notification_settings_repository.py  numbering_settings_repository.py  organization_preferences_repository.py  orgs.py  period_repository.py  rbac.py  report_export_repository.py  report_repository.py  sessions.py  supplier_credit_repository.py  supplier_payment_repository.py  supplier_repository.py  tax_code_repository.py  tax_rate_repository.py  tax_settings_repository.py  tax_transaction_repository.py  users.py
app/schemas/: __init__.py  accounting.py  ap.py  ar.py  audit.py  auth.py  banking.py  common.py  membership.py  organization.py  rbac.py  (+3 more)
frontend/: README.md  package.json  vitest.config.ts
scripts/: seed_rbac.py
(+410 files in other folders)
